Revert back to 1.1 with actual possibly working code

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,10 @@ install:
   - sudo dkp-pacman -S devkitARM citro3d libctru --noconfirm
   - export DEVKITPRO=/opt/devkitpro
   - export DEVKITARM=${DEVKITPRO}/devkitARM
-  - cd GameYob/
 
 script:
+  - ./3dsmake.sh
+  - cd GameYob/
   - make
   
 addons:
