--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - export DEVKITARM=${DEVKITPRO}/devkitARM
 
 script:
-  - sudo ./3dsmake.sh
+  - sudo sh 3dsmake.sh
   - cd GameYob/
   - make
   
